integrated return outcome comparing players functionality

--- a/td.ipynb
+++ b/td.ipynb
@@ -1021,11 +1021,95 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "#### players_return_point_outcome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/arnavboppudi/anaconda3/envs/myenv/lib/python3.9/site-packages/altair/utils/core.py:410: FutureWarning: the convert_dtype parameter is deprecated and will be removed in a future version.  Do ``ser.astype(object).apply()`` instead if you want ``convert_dtype=False``.\n",
+      "  col = df[col_name].apply(to_list_if_array, convert_dtype=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "import altair as alt\n",
+    "import pandas as pd\n",
+    "\n",
+    "## path to repo with relevant data\n",
+    "## ( https://github.com/JeffSackmann/tennis_slam_pointbypoint )\n",
+    "#data_prefix = '../tennis_slam_pointbypoint/'\n",
+    "\n",
+    "data_prefix = \"https://raw.githubusercontent.com/JeffSackmann/tennis_slam_pointbypoint/master/\"\n",
+    "\n",
+    "year = '2021'\n",
+    "tourney = 'wimbledon'\n",
+    "players = ['Ashleigh Barty', 'Karolina Pliskova', 'Aryna Sabalenka', 'Angelique Kerber']\n",
+    "\n",
+    "matches = pd.read_csv(data_prefix + year + '-' + tourney + '-matches.csv')\n",
+    "points = pd.read_csv(data_prefix + year + '-' + tourney + '-points.csv')\n",
+    "\n",
+    "## add match metadata to points rows\n",
+    "mpoints = pd.merge(points, matches).fillna(0)\n",
+    "\n",
+    "player_outcomes = []\n",
+    "for p in players:    \n",
+    "    ## points with target player returning\n",
+    "    returning1 = mpoints.loc[(mpoints['PointServer'] == 2) & (mpoints['player1'] == p)]\n",
+    "    returning2 = mpoints.loc[(mpoints['PointServer'] == 1) & (mpoints['player2'] == p)]\n",
+    "    rpoints = pd.concat([returning1, returning2])\n",
+    "    \n",
+    "    df = rpoints.loc[(rpoints['P1DoubleFault'] == 1) | (rpoints['P2DoubleFault'] == 1)]\n",
+    "    ret_winner = rpoints.loc[(rpoints['PointServer'] != rpoints['PointWinner']) & (rpoints['RallyCount'] <= 3)]\n",
+    "    ret_other = rpoints.loc[(rpoints['PointServer'] != rpoints['PointWinner']) & (rpoints['RallyCount'] > 3)]\n",
+    "    \n",
+    "    aces = rpoints.loc[(rpoints['PointServer'] == rpoints['PointWinner']) & (rpoints['RallyCount'] <= 2)]\n",
+    "    plus_one = rpoints.loc[(rpoints['PointServer'] == rpoints['PointWinner']) & (rpoints['RallyCount'] <= 4)]\n",
+    "    sv_other = rpoints.loc[(rpoints['PointServer'] == rpoints['PointWinner']) & (rpoints['RallyCount'] > 4)]\n",
+    "    \n",
+    "    total = float(len(rpoints))\n",
+    "    player_outcomes += [[p, 'Double Faults', len(df) / total, 1],\n",
+    "                        [p, 'Return Winners', (len(ret_winner) - len(df)) / total, 2],\n",
+    "                        [p, 'Return Longer', len(ret_other) / total, 3],\n",
+    "                        [p, 'Serve Longer', len(sv_other) / total, 4],\n",
+    "                        [p, 'Serve + 1', (len(plus_one) - len(aces)) / total, 5],\n",
+    "                        [p, 'Serve Winners', len(aces) / total, 6],\n",
+    "                         ]\n",
+    "\n",
+    "header = ['Player', 'Outcome', 'Percentage', 'Sort']\n",
+    "df = pd.DataFrame(player_outcomes, columns=header)\n",
+    "##df.astype({'KM/H': 'float', \n",
+    "##            }).dtypes\n",
+    "\n",
+    "    \n",
+    "chart = alt.Chart(df).mark_bar().encode(\n",
+    "    alt.X('sum(Percentage)',\n",
+    "          scale=alt.Scale(domain=(0, 1)),\n",
+    "          axis=alt.Axis(format='%', title='Percentage of return points'),\n",
+    "          ),\n",
+    "    order=alt.Order(\n",
+    "        'Sort',\n",
+    "        sort='ascending'\n",
+    "        ),\n",
+    "    y='Player',\n",
+    "    color=alt.Color('Outcome', sort=['Double Faults', 'Return Winners', 'Return Longer', 'Serve Longer', 'Serve + 1', 'Serve Winners'])\n",
+    ")\n",
+    "\n",
+    "out_path = 'output/' + tourney + '_sfists_return_outcomes_8888.html'\n",
+    "chart.save(out_path)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
